# MiniRenderOpenGL

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/Resources/Shaders/: shader.frag  shader.vert
app/src/main/cpp/: CMakeLists.txt  MiniRenderMain.cpp
app/src/main/cpp/OpenGLCubePipeline/: CMakeLists.txt
app/src/main/cpp/OpenGLCubePipeline/include/: FileLoadingService.h  OpenGLPipelineService.h  ShaderProgram.h  Vertex.h
app/src/main/cpp/OpenGLCubePipeline/src/: OpenGLPipelineService.cpp
